--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -43,4 +43,17 @@
     line-height: 2rem;
     font-weight: 300;
   }
+
+  a {
+    color: #a9acaa;
+
+    &:hover {
+      color: $antiflash-white;
+      text-decoration-color: $antiflash-white;
+    }
+  }
+}
+
+nav {
+  font-size: 1rem;
 }
