--- a/assets/global.scss
+++ b/assets/global.scss
@@ -15,6 +15,13 @@ body {
   font-family: 'Roboto', Verdana, Geneva, Sans-Serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-feature-settings:
+    "cv11", "salt", "ss01", "ss03",
+    "cv01", "cv02", "cv03", "cv04",
+    "cv05", "cv06", "cv09", "cv10";
   background: $eerie-black;
   color: $antiflash-white;
 }
