--- a/static/styles.css
+++ b/static/styles.css
@@ -114,9 +114,11 @@ nav {
 }
 
 nav ul {
+    display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: 1rem;
 }
 
 nav ul li {
